--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,8 @@
 @charset "utf-8";
 
 body{
-    background-color: rgba(255, 166, 0, 0.74)
+    background-color: rgba(255, 166, 0, 0.74);
+    font-family: cursive;
 }
 h1{
     
@@ -11,7 +12,8 @@ h1{
     text-align: center;
     text-shadow: gray 6px 0;
     text-transform: uppercase;
-    color: white
+    color: white;
+    font-family: sans-serif;
 }
 header{
     background-color: orange
@@ -19,10 +21,71 @@ header{
 nav{
     text-align: center;
     border: red 5px solid;
+    background-color: yellow;
 
 
 }
-#naranjas1{
-    background-image: url("naranja1.jpg");
-  background-repeat: repeat-x;
+
+p#p1{
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    width: 60%;
+    height: 35%;
+    z-index: 2;
+    border: red 4px solid;
+    background-color: orange;
+    text-align: center;
+    color: rgb(218, 16, 16);
+    background: url("") top left repeat-y,
+    hsl(105, 80%, 85%) url("tulipan-1f337.svg") top right repeat-y;
+  padding: 0 70px;
 }
+
+p#p2{
+    position: absolute;
+    bottom: 25%;
+    left: 5%;
+    width: 37%;
+    height: 27%;
+    border: yellowgreen 4px solid;
+    background-color: rgb(190, 190, 24);
+    text-align: left;
+    color: yellow;
+    letter-spacing: 5px;
+    
+
+
+}
+p#p3{
+position: absolute;
+bottom: 25%;
+right: 5%;
+width: 37%;
+height: 27%;
+border: blue 4px solid;
+background-color: rgb(66, 66, 202);
+text-align: right;
+color: rgb(223, 99, 27);
+}
+footer{
+    color: orange;
+    background-color:rgb(209, 89, 42) ;
+    position: absolute;
+    bottom: 1%;
+    width: 100%;
+    height: 7%;
+    text-align: center;
+}
+section{
+    color: blue;
+    background-color: orange;
+    
+}
+
+p:hover {
+    z-index: 3;
+  }
+
+
+
